# becas_extranjero_secihti

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: deploy-pages.yml
data/catalogs/: countries_manual.csv  deflactors_base_2020.csv  degrees_manual.csv  institutions_manual.csv  program_rules.csv
docs/: DATA_DICTIONARY.md  SIPOC.md
etl/: __init__.py  build_site_data.py  config.py  country_utils.py  io_utils.py  normalize.py  pipeline.py  run_pipeline.py
etl/rules/: __init__.py  foreign_scholarships.py  national_scholarships.py
reports/: _quarto.yml  index.qmd  metodologia.qmd
reports/.quarto/idx/: index.qmd.json  metodologia.qmd.json
reports/.quarto/xref/: 35797eb8  537f2389  INDEX
scripts/: download_snapshots.py  generate_map_gif.ps1
site/: index.html  index_old.html  map_capture.html  nacionales.html
site/assets/css/: styles.css  styles_bis.css
site/assets/data/: summary.js  summary.json  summary_national.js  summary_national.json  world-map.js
site/assets/js/: app.js  app_national.js
site/quarto/: index.html  metodologia.html  search.json
tests/: test_deflactor_formula.py  test_metadata_and_country_utils.py
